--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.DAL/CheekiBreeki.CMH.Terminal.DAL.csproj
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.DAL/CheekiBreeki.CMH.Terminal.DAL.csproj
@@ -56,35 +56,35 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ARCHIVO.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="ASEGURADORA.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="ATENCION_AGEN.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="BANCO.cs">
       <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="BONO.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="CAJA.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="CARGO.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="CMHModelo.Context.cs">
+    <Compile Include="CMHModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>CMHModelo.Context.tt</DependentUpon>
+      <DependentUpon>CMHModel.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="CMHModelo.cs">
+    <Compile Include="CMHModel.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="CMHModel.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -95,65 +95,65 @@
       <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="DEVOLUCION.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="ENTRADA_FICHA.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="EQUIPO_REQ.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="ESPECIALIDAD.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="ESTADO_ATEN.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="FICHA.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="FUNCIONARIO.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="INVENTARIO.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="ORDEN_ANALISIS.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="PACIENTE.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="PAGO.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="PERSONAL.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="PERS_MEDICO.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="PRESTACION.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PRUEBA.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="RES_ATENCION.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="TIPO_C_BANCARIA.cs">
       <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="TIPO_EQUIPO.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="TIPO_PRES.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="TURNO.cs">
-      <DependentUpon>CMHModelo.tt</DependentUpon>
+      <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -173,15 +173,15 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="CMHModelo.Context.tt">
+    <Content Include="CMHModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>CMHModel.edmx</DependentUpon>
-      <LastGenOutput>CMHModelo.Context.cs</LastGenOutput>
+      <LastGenOutput>CMHModel.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="CMHModelo.tt">
+    <Content Include="CMHModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>CMHModel.edmx</DependentUpon>
-      <LastGenOutput>CMHModelo.cs</LastGenOutput>
+      <LastGenOutput>CMHModel.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
