--- a/cmh/terminal/Cheekibreeki.CMH.Seguro.BL/Cheekibreeki.CMH.Seguro.BL.csproj
+++ b/cmh/terminal/Cheekibreeki.CMH.Seguro.BL/Cheekibreeki.CMH.Seguro.BL.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccionesSeguro.cs" />
+    <Compile Include="ComprobarSeguroResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
