--- a/cmh/terminal/Cheekibreeki.CMH.Seguro.DAL/App.config
+++ b/cmh/terminal/Cheekibreeki.CMH.Seguro.DAL/App.config
@@ -41,5 +41,5 @@
   <connectionStrings>
     <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />
     
-  <add name="SeguroEntities" connectionString="metadata=res://*/CMHModel.csdl|res://*/CMHModel.ssdl|res://*/CMHModel.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost:1521/XE;PASSWORD=devseguro;PERSIST SECURITY INFO=True;USER ID=DEVSEGURO&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="SeguroEntities" connectionString="metadata=res://*/SeguroModel.csdl|res://*/SeguroModel.ssdl|res://*/SeguroModel.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost:1521/XE;PASSWORD=devseguro;PERSIST SECURITY INFO=True;USER ID=DEVSEGURO&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
