--- a/cmh/servPago/nbproject/project.properties
+++ b/cmh/servPago/nbproject/project.properties
@@ -27,9 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/servpago.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.ojdbc7.jar=lib\\ojdbc7.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.ojdbc7.jar}:\
+    ${reference.cmhlib.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -61,6 +64,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.cmhlib=../cmhlib
+reference.cmhlib.jar=${project.cmhlib}/dist/cmhlib.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
