--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.BL/App.config
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.BL/App.config
@@ -55,4 +55,16 @@
       connectionString="metadata=res://*/CMHModel.csdl|res://*/CMHModel.ssdl|res://*/CMHModel.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost:1521/XE;PASSWORD=dev;PERSIST SECURITY INFO=True;USER ID=DEV&quot;"
       providerName="System.Data.EntityClient"/>
   </connectionStrings>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_ISeguroWS" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:8733/Design_Time_Addresses/Cheekibreeki.CMH.Seguro.WS/Service1/"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISeguroWS"
+        contract="SeguroServiceReference.ISeguroWS" name="BasicHttpBinding_ISeguroWS" />
+    </client>
+  </system.serviceModel>
 </configuration>
