--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.BL/CheekiBreeki.CMH.Terminal.BL.csproj
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.BL/CheekiBreeki.CMH.Terminal.BL.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,6 +59,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReporteCaja.cs" />
     <Compile Include="ResultadoVerificacionSeguro.cs" />
+    <Compile Include="Service References\SeguroServiceReference\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -64,6 +71,19 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
+    <None Include="Service References\SeguroServiceReference\Cheekibreeki.CMH.Seguro.WS.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\SeguroServiceReference\CheekiBreeki.CMH.Terminal.BL.SeguroServiceReference.SeguroResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\SeguroServiceReference\service.wsdl" />
+    <None Include="Service References\SeguroServiceReference\service.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\SeguroServiceReference\service1.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CheekiBreeki.CMH.Terminal.DAL\CheekiBreeki.CMH.Terminal.DAL.csproj">
@@ -73,6 +93,21 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\SeguroServiceReference\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\SeguroServiceReference\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\SeguroServiceReference\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\SeguroServiceReference\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
