--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.BL/CheekiBreeki.CMH.Terminal.BL.csproj
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.BL/CheekiBreeki.CMH.Terminal.BL.csproj
@@ -62,6 +62,7 @@
     <Compile Include="AccionesTerminal.cs" />
     <Compile Include="ConversorBase64.cs" />
     <Compile Include="Emailer.cs" />
+    <Compile Include="Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReporteCaja.cs" />
     <Compile Include="ResultadoVerificacionSeguro.cs" />
