--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/App.config
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/App.config
@@ -14,20 +14,15 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="mssqllocaldb"/>
+        <parameter value="v12.0"/>
       </parameters>
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+      <provider invariantName="Oracle.ManagedDataAccess.Client"
+        type="Oracle.ManagedDataAccess.EntityFramework.EFOracleProviderServices, Oracle.ManagedDataAccess.EntityFramework, Version=6.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="CMHEntities" connectionString="metadata=res://*/CMHModel.csdl|res://*/CMHModel.ssdl|res://*/CMHModel.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost:1521/XE;PASSWORD=dev;PERSIST SECURITY INFO=True;USER ID=DEV&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="CheekiBreeki.CMH.Terminal.Views.Properties.Settings.ConnectionString"
-      connectionString="DATA SOURCE=localhost:1521/XE;PASSWORD=dev;PERSIST SECURITY INFO=True;USER ID=DEV"
-      providerName="Oracle.ManagedDataAccess.Client" />
-  </connectionStrings>
   <system.data>
     <DbProviderFactories>
       <remove invariant="Oracle.ManagedDataAccess.Client"/>
@@ -51,4 +46,11 @@
       </dataSources>
     </version>
   </oracle.manageddataaccess.client>
+  <connectionStrings>
+    <add name="CMHEntities"
+      connectionString="metadata=res://*/CMHModel.csdl|res://*/CMHModel.ssdl|res://*/CMHModel.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost:1521/XE;PASSWORD=dev;PERSIST SECURITY INFO=True;USER ID=DEV&quot;"
+      providerName="System.Data.EntityClient"/>
+    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client"
+      connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle"/>
+  </connectionStrings>
 </configuration>
