--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/Properties/Settings.settings
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/Properties/Settings.settings
@@ -1,14 +1,7 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CheekiBreeki.CMH.Terminal.Views.Properties" GeneratedClassName="Settings">
-  <Profiles />
-  <Settings>
-    <Setting Name="ConnectionString" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;DATA SOURCE=localhost:1521/XE;PASSWORD=dev;PERSIST SECURITY INFO=True;USER ID=DEV&lt;/ConnectionString&gt;
-  &lt;ProviderName&gt;Oracle.ManagedDataAccess.Client&lt;/ProviderName&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">DATA SOURCE=localhost:1521/XE;PASSWORD=dev;PERSIST SECURITY INFO=True;USER ID=DEV</Value>
-    </Setting>
-  </Settings>
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
+  <Profiles>
+    <Profile Name="(Default)" />
+  </Profiles>
+  <Settings />
 </SettingsFile>
