--- a/cmh/webapp/web/WEB-INF/web.xml
+++ b/cmh/webapp/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>Login</servlet-name>
         <servlet-class>cl.cheekibreeki.cmh.webapp.servlet.Login</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Registro</servlet-name>
+        <servlet-class>cl.cheekibreeki.cmh.webapp.servlet.Registro</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Router</servlet-name>
         <url-pattern>/Router.do</url-pattern>
@@ -15,6 +19,10 @@
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/Login.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Registro</servlet-name>
+        <url-pattern>/Registro.do</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
