--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.BL/CheekiBreeki.CMH.Terminal.BL.csproj
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.BL/CheekiBreeki.CMH.Terminal.BL.csproj
@@ -63,6 +63,8 @@
     <Compile Include="AccionesTerminal.cs" />
     <Compile Include="ConversorBase64.cs" />
     <Compile Include="Emailer.cs" />
+    <Compile Include="HoraDisponible.cs" />
+    <Compile Include="HorasDisponibles.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReporteCaja.cs" />
     <Compile Include="ResultadoVerificacionSeguro.cs" />
